# AI-DevTools-Hack-cloudru

./: README.md
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/scripts/: test_a2a_client.py  test_cloudru_api.py
agent/src/: __init__.py  a2a_wrapper.py  agent.py  agent_task_manager.py  prompts.py  start_a2a.py
agent/tests/: __init__.py  test_agent.py
demo-app/: app.py
demo-app/templates/: index.html
mcp-cloudru/: .env.example  Dockerfile  README.md  mcp_tools.json  pyproject.toml
mcp-cloudru/src/: __init__.py  rag_client.py  s3_client.py  server.py
mcp-followup/: .env.example  .gitignore  Dockerfile  README.md  mcp_tools.json  pyproject.toml
mcp-followup/scripts/: get_transcription.py  join_conference_with_mcp.py  join_conference_without_mcp_client.py  list_conferences.py  test_pdf_download.py  test_s3_upload.py
mcp-followup/src/: __init__.py  followup_client.py  rag_s3_client.py  server.py
mcp-followup/tests/: __init__.py  test_api_response.py  test_client.py  test_e2e.py  test_list_conferences_tool.py  test_rag_sync.py  test_unit.py
mcp-google-calendar/: .env.example  .gitignore  Dockerfile  README.md  mcp_tools.json  pyproject.toml
mcp-google-calendar/scripts/: create_event.py  create_event_oauth.py  export_token_to_env.py  extract_token.py  list_events.py  setup_oauth.py
mcp-google-calendar/src/: __init__.py  server.py
mcp-google-calendar/tests/: __init__.py  test_unit.py
telegram-bot/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
telegram-bot/config/: __init__.py  config.py
telegram-bot/src/: __init__.py
telegram-bot/src/handlers/: __init__.py  common.py
telegram-bot/src/keyboards/: __init__.py
telegram-bot/src/services/: __init__.py  agent_connector.py  request_manager.py
telegram-bot/src/utils/: __init__.py  session.py
telegram-bot/tests/: __init__.py  test_bot.py
