[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-assistant-telegram-bot"
version = "0.1.0"
description = "Telegram bot for Meeting Assistant AI Agent"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.3",
    "telegramify-markdown>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
